# PairProgrammingHWGui

./: BUAASoftwareEngineeringPairProgrammingHWGui_zh_CN.ts  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcpitemhalfline.cpp  qcpitemhalfline.h  test.txt
include/: Point.h  Shapes.h  StdInterface.h  interface.h
lib/: libgCore.lib  liblibgeometry.lib
